fixed adding new comment

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -29,7 +29,7 @@
             </ul>
     </div>
     <h3>Add a Comment</h3>
-    <form th:object="${gameDetails}" method="post" th:action="@{/game/{gid}(gid=${gid})}">
+    <form th:object="${gameDetails}" method="post" th:action="@{/comment}">
         <table>
             <tr>   
                 <td>
